# parsec-stubs

./: .editorconfig  .pre-commit-config.yaml  README.md  pyproject.toml
src/parsec-stubs/: __init__.pyi
