[build-system]
requires = ['poetry-core>=1.0.0']
build-backend = 'poetry.core.masonry.api'

[tool.poetry]
name = 'parsec-stubs'
version = '0.0.1'
description = 'type stubs for parsec'
authors = ['Luis Marsano']
packages = [
	{include = 'parsec-stubs', from ='src'}
]

[tool.poetry.dependencies]
python = '^3.7'
parsec = '^3.5'

[tool.poetry.dev-dependencies]
pre-commit = '^2.13.0'

[tool.black]
target_version = ['py37']
skip_magic_trailing_comma = true

[tool.isort]
profile = 'black'
combine_as_imports = true
